# gmsk

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  _whichenum_enum.go  basindtype_enum.go  boundkey_enum.go  branchdir_enum.go  callbackcode_enum.go  capis.go  checkconvexitytype_enum.go  cmosek.go  compresstype_enum.go  conetype_enum.go  dataformat_enum.go  dinfitem_enum.go  doc.go  domaintype_enum.go  dparam_enum.go  enums.go  env.go  env_methods.go  error.go  error_test.go  example_acc1_test.go  example_acc2_test.go  example_blas_lapack_test.go  example_ceo1_test.go  example_cqo1_test.go  example_djc1_test.go  example_gp1_test.go  example_helloworld_test.go  example_lo1_test.go  example_logistic_test.go  example_mico1_test.go  example_milo1_test.go  example_mioinitsol_test.go  example_portfolio_1_basic_test.go  (+89 more)
bazel/: extensions.bzl  mosek.BUILD.tpl  mosek_repo.bzl
res/: BUILD.bazel  code.go  codes.go  error.go  generate.go
